# AstroBayesDemo

./: README.md  pyproject.toml
examples/: basic_demo.py
src/astro_bayes_demo/: __init__.py  data.py  model.py  plotting.py  posterior.py
tests/: test_data.py  test_model.py  test_plotting.py  test_posterior.py
