[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-bayes-demo"
version = "0.1.0"
description = "A small Bayesian inference demo for synthetic astronomy-like data."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Joey Zhang"},
]
keywords = ["astronomy", "bayesian-inference", "education", "demo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/ZhJoey/AstroBayesDemo"
Repository = "https://github.com/ZhJoey/AstroBayesDemo"
Issues = "https://github.com/ZhJoey/AstroBayesDemo/issues"
